--- a/core/res/res/values-it-rIT/spark_strings.xml
+++ b/core/res/res/values-it-rIT/spark_strings.xml
@@ -16,7 +16,7 @@
     <!-- Button that copies the url to the log of a crashed application -->
     <string name="aerr_copy">Copia l\'URL del log del crash</string>
     <string name="url_copy_success">URL copiato con successo</string>
-    <string name="url_copy_failed">An error occured while uploading the log to hastebin</string>
+    <string name="url_copy_failed">Si è verificato un errore nel caricamento del log su hastebin</string>
     <!-- SystemUI Restart -->
     <string name="systemui_restart_title">Riavvio della SystemUI richiesto</string>
     <string name="systemui_restart_message">Per rendere effettive tutte le modifiche, è necessario un riavvio dell\'interfaccia utente. Riavviarla ora?</string>
@@ -58,7 +58,7 @@
     <!-- Aerr strings -->
     <string name="aerr_disable">Disattiva app</string>
     <!-- Button that opens the screen with details of an application error -->
-    <string name="aerr_show_details">Show details</string>
+    <string name="aerr_show_details">Mostra dettagli</string>
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
 </resources>
