--- a/core/res/res/values-ru-rRU/spark_strings.xml
+++ b/core/res/res/values-ru-rRU/spark_strings.xml
@@ -16,7 +16,7 @@
     <!-- Button that copies the url to the log of a crashed application -->
     <string name="aerr_copy">Скопировать ссылку лога ошибки</string>
     <string name="url_copy_success">URL-адрес успешно скопирован</string>
-    <string name="url_copy_failed">An error occured while uploading the log to hastebin</string>
+    <string name="url_copy_failed">Произошла ошибка во время загрузки лога на Hastebin</string>
     <!-- SystemUI Restart -->
     <string name="systemui_restart_title">Необходима перезагрузка системного интерфейса</string>
     <string name="systemui_restart_message">Чтобы все изменения вступили в силу, требуется перезагрузка системного интерфейса. Перезагрузить сейчас?</string>
@@ -58,7 +58,7 @@
     <!-- Aerr strings -->
     <string name="aerr_disable">Отключить приложение</string>
     <!-- Button that opens the screen with details of an application error -->
-    <string name="aerr_show_details">Show details</string>
+    <string name="aerr_show_details">Подробнее</string>
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
 </resources>
