--- a/core/res/res/values-tr-rTR/spark_strings.xml
+++ b/core/res/res/values-tr-rTR/spark_strings.xml
@@ -16,7 +16,7 @@
     <!-- Button that copies the url to the log of a crashed application -->
     <string name="aerr_copy">Çökme günlüğü URL\' sini kopyala</string>
     <string name="url_copy_success">URL başarıyla kopyalandı</string>
-    <string name="url_copy_failed">An error occured while uploading the log to hastebin</string>
+    <string name="url_copy_failed">Günlük hastebin\'e yüklenirken bir hata oluştu</string>
     <!-- SystemUI Restart -->
     <string name="systemui_restart_title">Sistem arayüzünü yeniden başlatma gerekli</string>
     <string name="systemui_restart_message">Değişikliklerin uygulanması için Sistem Arayüzü\'nün yeniden başlatılması gerekiyor. Yeniden başlatılsın mı?</string>
@@ -58,7 +58,7 @@
     <!-- Aerr strings -->
     <string name="aerr_disable">Uygulamayı devre dışı bırak</string>
     <!-- Button that opens the screen with details of an application error -->
-    <string name="aerr_show_details">Show details</string>
+    <string name="aerr_show_details">Ayrıntıları göster</string>
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
 </resources>
