--- a/packages/SystemUI/res/values/spark_dimens.xml
+++ b/packages/SystemUI/res/values/spark_dimens.xml
@@ -109,4 +109,7 @@
     <dimen name="qs_header_alarm_icon_size">@dimen/status_bar_icon_drawing_size</dimen>
     <dimen name="qs_status_separator">8dp</dimen>
     <dimen name="qs_temperatur_icon_size">16sp</dimen>
+
+    <!-- Bluetooth dialog -->
+    <dimen name="bluetooth_dialog_active_device_bottom_margin">4dp</dimen>
 </resources>
