SystemUI: Implement Aqua design to volume panel
* ui concept by AYAN98542

Co-authored-by: Ayan <79016495+AYAN98542@users.noreply.github.com>
Signed-off-by: minaripenguin37 <alexfinhart@gmail.com>

--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -778,4 +778,7 @@
         <item>@color/dream_overlay_aqi_very_unhealthy</item>
         <item>@color/dream_overlay_aqi_hazardous</item>
     </integer-array>
+    
+    <integer name="background_blur_radius">80</integer>
+    <item name="background_blur_colour_opacity" format="float" type="dimen">0.88</item>
 </resources>
