--- a/packages/SystemUI/res/values/spark_strings.xml
+++ b/packages/SystemUI/res/values/spark_strings.xml
@@ -288,4 +288,7 @@
     <string name="quick_settings_preferred_network_lte">4g / LTE</string>
     <string name="quick_settings_preferred_network_nr">5g / NR</string>
     <string name="quick_settings_preferred_network_unsupported">Unsupported</string>
+
+    <!-- Screenshot Tile -->
+    <string name="screenshot_long_press">Long press - selected region</string>
 </resources>
